--- a/.github/workflows/quip_runner.yml
+++ b/.github/workflows/quip_runner.yml
@@ -2,4 +2,4 @@
         uses: peter-evans/repository-dispatch@v2
         with:
           token: ${{ secrets.REPO_ACCESS_TOKEN }}
-          event-type: main.py
+          repository: critical-mass/Quip-Scripts
