--- a/.github/workflows/quip_runner.yml
+++ b/.github/workflows/quip_runner.yml
@@ -3,4 +3,4 @@
         with:
           token: ${{ secrets.REPO_ACCESS_TOKEN }}
           repository: critical-mass/Quip-Scripts
-          run: python ${{ env.Quip-Scripts_dir }}/main.py
+          run: python main.py
