--- a/.github/workflows/quip_runner.yml
+++ b/.github/workflows/quip_runner.yml
@@ -1,5 +1,7 @@
 name: Quip-Scripts
-  on: repository_dispatch
+  on: 
+    repository_dispatch:
+      types: quip 
   uses: peter-evans/repository-dispatch@v2
   with:
     token: ${{ secrets.REPO_ACCESS_TOKEN }}
