--- a/.github/workflows/quip_runner.yml
+++ b/.github/workflows/quip_runner.yml
@@ -12,6 +12,7 @@ jobs:
         steps:
         - name: Checkout repo 
           uses: actions/checkout@v2
+            repository: critical-mass/Quip-Scripts
           
         - name: Running main.py
           run: python ${{ env.repo_dir }}/main.py
