--- a/.github/workflows/quip_runner.yml
+++ b/.github/workflows/quip_runner.yml
@@ -19,4 +19,5 @@ jobs:
           uses: actions/setup-python@v3
           with: 
             python-version: '3.9'
+        - run: pip install -r requirements.txt
         - run: python main.py
