--- a/.github/workflows/quip_runner.yml
+++ b/.github/workflows/quip_runner.yml
@@ -22,3 +22,4 @@ jobs:
             python-version: '3.9'
         - run: pip install -r requirements.txt
         - run: python main.py
+        - run: 'echo "Body: ${{ github.event.client_payload.foo }}"'
