--- a/.github/workflows/quip_runner.yml
+++ b/.github/workflows/quip_runner.yml
@@ -5,6 +5,7 @@ on:
     types: payload
 env: 
   repo_dir: Quip-Scripts
+  body: {{ toJson(github.event.client_payload.message) }}
 
 jobs:
     entireJob:
@@ -15,7 +16,7 @@ jobs:
           uses: actions/checkout@v2
           with:
             repository: critical-mass/Quip-Scripts
-        - run: 'echo "payload: ${{ toJson(github.event.client_payload.message) }}"'
+        - run: 'echo "payload: $body"'
         - name: Running main.py
           uses: actions/setup-python@v3
           with: 
