--- a/.github/workflows/quip_runner.yml
+++ b/.github/workflows/quip_runner.yml
@@ -20,6 +20,5 @@ jobs:
           uses: actions/setup-python@v3
           with: 
             python-version: '3.9'
-            body: ${{ toJson(github.event.client_payload.message) }}
         - run: pip install -r requirements.txt
-        - run: python main.py
+        - run: python main.py ${{ github.event.client_payload.message }}
